# OOP_hw2

./: Board.h  CMakeLists.txt  FightInfo.h  JokerChange.h  Move.h  PiecePosition.h  PlayerAlgorithm.h  Point.h  RPSAutoPiece.h  RPSBoard.cpp  RPSBoard.h  RPSFight.cpp  RPSFight.h  RPSGame.cpp  RPSGame.h  RPSGameBoard.h  RPSMove.h  RPSPiece.h  RPSPlayerAuto.cpp  RPSPlayerAuto.h  RPSPlayerFromFile.cpp  RPSPlayerFromFile.h  RPSPoint.h  RPSPosChecker.cpp  RPSPosChecker.h  RPSPosParser.cpp  RPSPosParser.h  RPSProfilePlayer.cpp  RPSProfilePlayer.h  main.cpp  player1.rps_moves  player2.rps_board  player2.rps_moves  rps.output
