cmake_minimum_required(VERSION 3.9)
project(OOP_hw2)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP_hw2 main.cpp PlayerAlgorithm.h Point.h PiecePosition.h Board.h FightInfo.h Move.h JokerChange.h RPSGame.cpp RPSGame.h RPSPoint.h RPSPiece.h RPSMove.h RPSFight.cpp RPSFight.h RPSPlayerFromFile.cpp RPSPlayerFromFile.h RPSPlayerAuto.cpp RPSPlayerAuto.h RPSPosChecker.cpp RPSPosChecker.h RPSGameBoard.h)